--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         </div>
     </section>
     <section class="copyrightWrapper">
-        <p>Copyrights © 2023 <span class="primary-color">Restaurt.</span> Designed by <span class="primary-color">Zozothemes</span></p>
+        <p>Copyrights © 2024 Restaurant</p>
     </section>
 
    </footer>
